--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,19 +32,6 @@
             </intent-filter>
         </activity>
         
-        <activity
-            android:name="com.nemus.apps.glasslock.ui.GestureBuilderActivity"
-            android:label="@string/title_gesture_list"
-            android:icon="@drawable/ic_launcher"
-            android:theme="@style/AppTheme"
-            >
-        </activity>
-
-        <activity
-            android:name="com.nemus.apps.glasslock.ui.CreateGestureActivity"
-            android:label="@string/title_gesture_create"
-            android:theme="@style/AppTheme"
-            />
         
         <service
             android:name="com.nemus.apps.glasslock.LockService"
@@ -65,6 +52,30 @@
                 <action android:name="android.intent.action.USER_PRESENT" />
             </intent-filter>            
         </receiver>
+        
+        
+        
+        <!--  gesture  -->
+        <activity
+            android:name="com.nemus.apps.glasslock.lock.gesture.GestureBuilderActivity"
+            android:label="@string/title_gesture_list"
+            android:icon="@drawable/ic_launcher"
+            android:theme="@style/AppTheme"
+            >
+        </activity>
+
+        <activity
+            android:name="com.nemus.apps.glasslock.lock.gesture.CreateGestureActivity"
+            android:label="@string/title_gesture_create"
+            android:theme="@style/AppTheme"
+            />
+        
+        <activity
+            android:name="com.nemus.apps.glasslock.lock.gesture.GestureSettingsActivity"
+            android:label="@string/settings_gesture"
+            android:theme="@style/AppTheme"
+			/>            
+        
         
     </application>
 
